--- a/modelo_copin/app/distrib.tex
+++ b/modelo_copin/app/distrib.tex
@@ -1,10 +1,33 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Distribuição das variáveis}
+\chapter{Distribuição das variáveis das cinco maiores comunidades}
 \label{app:distrib}
 
 \begin{figure}
-  \raggedleft
-  % \includegraphics[width=1\columnwidth]{figures/questions_women.pdf}
-  \includegraphics[width=1\columnwidth]{figures/test2.pdf}
-  % \caption[Comparação do número de perguntas]{Comparação do número de perguntas vindas de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{figure:questions}
+  \centering
+  \includegraphics[height=0.65\paperheight]{figures/stackoverflow.pdf}
+  \caption[Distribuição das variáveis para o site \emph{StackOverflow}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{StackOverflow}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+\end{figure}
+
+\begin{figure}
+	\centering
+  \includegraphics[height=0.65\paperheight]{figures/superuser.pdf}
+ \caption[Distribuição das variáveis para o site \emph{SuperUser}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{SuperUser}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+\end{figure}
+
+\begin{figure}
+	\centering
+  \includegraphics[height=0.65\paperheight]{figures/serverfault.pdf}
+  \caption[Distribuição das variáveis para o site \emph{ServerFault}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{ServerFault}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+\end{figure}
+
+\begin{figure}
+	\centering
+  \includegraphics[height=0.65\paperheight]{figures/math.pdf}
+  \caption[Distribuição das variáveis para o site \emph{Mathematics}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Mathematics}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[height=0.65\paperheight]{figures/programmers.pdf}
+  \caption[Distribuição das variáveis para o site \emph{Programmers}]{Distribuição das variáveis onde foi aplicado o teste \emph{Mann-Whitney-U} para o site \emph{Programmers}. Mostramos a distribuição acumulada para as variáveis discretas e a densidade, para as variáveis contínuas. }
 \end{figure}
