--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -1,6 +1,7 @@
 %!TEX root = main_mestrado.tex
 
 \chapter{Limitações}
+\label{ch:limites}
 % In spite of the insights given in this paper, this study is not conclusive in itself. For following up on this research, a qualitative enquire seems paramount to deepen the analysis started here. Also, widening the factors related to participation can help put our results in perspective.
 
 Apesar de todas as resoluções as quais chegamos nesta pesquisa, ela não é completa. Uma pesquisa qualitativa soa como um bom começo para complementar as análises que começamos aqui. Outrossim, adicionar mais fatores relacionados à participação pode ajudar a ampliar a visão que temos da situação.
@@ -18,6 +19,7 @@ Embora nossa amostra contenha sites com uma diversidade significante de temas, t
 Finalmente, nossa abordagem quantitativa e conjunto de dados usado não nos permite investigar profundamente quanto às razões de várias diferenças e similaridades encontradas. Nos parece necessário e oportuno realizar um estudo qualitativo que complementasse nossa iniciativa.
 
 \chapter{Conclusões}
+\label{ch:concl}
 
 % This paper took an alternative approach into gender studies in Q\&A online communities, changing the focus from the number of users of each sex to their participation, quality of contributions and engagement. Overall, our results show that, individually, women who display their gender information do engage to these sites as much as men do. In several sites, women indeed tend to individually contribute more than men. 
 
