--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -1,5 +1,6 @@
 %!TEX root = main_mestrado.tex
 \chapter{Discussão}
+\label{ch:discussao}
 
 Nossa expectativa ao observar contribuições individuais de usuários de diferentes gêneros era que mulheres, por serem uma minoria, iriam participar menos destes sites, assim como na \emph{Wikipedia}~\cite{antin2011gender} e comunidades \emph{FOSS}~\cite{rustad2011suck}. Contudo, o que encontramos não foram diferenças, mas uma grande equivalência entre o comportamento de homens e mulheres nos sites estudados. 
 
@@ -15,11 +16,7 @@ Contudo, não é isso que acontece. Na maioria das comunidades, mulheres produze
 
 % Quanto ao tempo de vida de mulheres nestas comunidades, nota-se que a diferença de tempo é maior em comunidades mais antigas, vide tabela \ref{table:lifetime}. Isso pode se dar por que tais comunidades, a exemplo do StackOverflow, foram criadas por um grupo de homens e se mantiveram assim por bastante tempo, até se tornarem popular. Este grupo de usuários provavelmente tem um tempo de vida bem maior do que as mulheres que eventualmente ingressaram na comunidade. 
 
-% On the other hand, although women contribute more answers in several sites, this does not happen in \emph{STEM} sites. In fact, women contribute significantly less answers in all of the four largest and oldest sites, which are also \emph{STEM}-related (StackOverflow, SuperUser, ServerFault and Mathematics). If these sites influence women to participate less in their answering process, their magnitude implies many women are presently contributing less answers than they could be. Given that there are examples of sites in other categories where an average woman answers more often than  man, our results suggest a factor specific to some sites -- and likely to their community -- is presently at play. This observation is also complemented by significantly lower lifetimes for women contributors in these sites (Table~\ref{table:lifetime}).
-
 Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} isto não acontece. Mulheres contribuem com menos respostas do que homens em todos os quatro maiores e mais antigos sites da plataforma: \emph{StackOverflow}, \emph{SuperUser}, \emph{SeverFault} e \emph{Mathematics}. Se estes sites influenciam mulheres a participarem menos no processo de resposta, a grandeza deles pode implicar que um grande número de mulheres estão contribuindo menos respostas do que poderiam estar. Sabendo que existem sites em outras categorias onde mulheres comuns respondem mais do que homens, nossos resultados sugerem que há um fator característico em alguns sites -- e provavelmente à comunidade -- atuando no comportamento das mulheres quanto às suas contribuições. A visível e gritante diferença no tempo de vida entre homens e mulheres nestas comunidades complementa este pensamento (ver Tabela~\ref{table:lifetime}).
-
-% One possible characteristic that links some of the \emph{STEM} sites in \emph{StackExchange} is that several of these sites grew out of StackOverflow. If StackOverflow was created by a nucleus of men who set the culture of this site, there may be a set of values and practices more closely shared by \emph{STEM} sites that grew out of it.
 
 Uma característica comum a algumas comunidades relacionadas a \emph{STEM} do \emph{StackExchange} é que elas são ramos do \emph{StackOverflow} que foi criada por um grupo de homens e se manteve assim por bastante tempo, até se tornar popular. É provável que este grupo de homens tenham sua própria cultura dentro do \emph{StackOverflow}, com seus valores e práticas que não sejam amigáveis às mulheres, e esta cultura tenha passado para os demais sites, fazendo com que estes sejam sites com características sociais que não atraiam as mulheres.
 
@@ -32,8 +29,6 @@ Apesar de não ser relacionada com sua real performance, a percepção que uma p
 Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo \emph{UX} (\textit{user experience}) mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
 
 Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
-
-% Overall, our results portrait most \emph{StackExchange} site as having contributor communities with few behavior differences related to gender. Nevertheless, there seem to be two widespread barriers: one for entrance, given the small proportion of female contributors, and a second one related to the premature departure of engaged contributors in some sites. Both of these behaviors are more accentuated in the largest and \emph{STEM} related sites, suggesting these communities have higher barriers for women. This, together with the fact that women still tend to ask more questions than men in these communities, calls for a deeper qualitative investigation why this pattern emerges.
 
 No geral, nossos resultados mostram que a maioria dos sites do \emph{StackExchange} possuem comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, considerando a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas as barreiras são mais expressivas nas maiores comunidades relacionadas a \emph{STEM}, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos, juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades, requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
 
