--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -90,9 +90,9 @@ showstringspaces=false
 \Titulo{Diferenças Comportamentais Entre Gêneros em Comunidades de Perguntas e Respostas}
 % Gender differences (and similarities) in contribution behavior on social Q\&A sites
 \Autor{Milena Sales Araujo}
-\Data{30/06/2015}
+\Data{15/07/2015}
 \Area{Ciência da Computação}
-\Pesquisa{Computação Social}
+\Pesquisa{Sistemas de Computação}
 \Orientadores{Nazareno Ferreira de Andrade  \\
 	 (Orientador)}
 
@@ -165,6 +165,7 @@ showstringspaces=false
 %% \input{cap1} 
 %% \input{cap2}
 \input{introducao}
+\input{contexto}
 \input{revisao}
 \input{metodos}
 \input{resultados}
