--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -1,5 +1,6 @@
 %!TEX root = main_mestrado.tex
 \chapter{Literatura}
+\label{ch:literatura}
 
 Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista que vê as causas na biologia e o Constructo Social que vê as causas no meio, o qual é considerado \emph{male-friendly} (propício aos homens) mas não \emph{female-friendly} (propício às mulheres). Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
 
